fix screen width of popups, align to center

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,8 +1,10 @@
 .whole-content{
     height: 100vh;
     margin: 0;
-    display: flex;  /* This makes flex children work */
+    display: flex;  
     flex-direction: column;
+    width: 100vw;  
+    align-items: stretch; 
 }
 
 .main-content{
