--- a/src/app/extend/extend.component.css
+++ b/src/app/extend/extend.component.css
@@ -3,15 +3,18 @@
 button {margin: 20px;}
 
 body{
-	font-family: Arial, sans-serif;
+    display: flex;
+    flex-direction: column; /* Stack elements vertically */
+
+	align-items: center;
+	min-height: 100vh;
+    width: 100vw;
+	margin: 0;
+	padding: 0;	
+    font-family: Arial, sans-serif;
 	text-align: center;
 	background-color: #f4f4f9;
-	margin: 0;
-	padding: 0;
-	display: flex;
 	justify-content: center;
-	align-items: center;
-	height: 100vh;
 }
 
 .spinner {
@@ -27,6 +30,7 @@ body{
 	border-radius: 10px;
 	box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
 	max-width: 400px;
+    width: 100%; 
 }
 
 .response {
